# mma

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.e2e  README.md  docker-compose.e2e.yml
.github/: triage-allowlist.txt
.github/workflows/: bootstrap-secrets.yml  build-sidecar.yml  claude-issues.yml  copyright-release.yml  e2e.yml  lint.yml  plugins.yml  release.yml  update-manual.yml  vision-release.yml
.husky/: commit-msg
app/: .prettierignore  eslint.config.js  package-lock.json  package.json  speed-matrix.txt  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  wdio.conf.ts
app/src/: App.tsx  api.ts  bindings.gen.ts  main.tsx  mdx.d.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/crates/tauri-plugin-webserve/: Cargo.toml
app/src-tauri/crates/tauri-plugin-webserve/src/: bootstrap.js  lib.rs  sw.js
app/src-tauri/crates/vali/vali-core/: Cargo.toml
app/src-tauri/crates/vali/vali-core/src/: lib.rs  location.rs  map_definition.rs
app/src-tauri/crates/vali/vali-data/: Cargo.toml
app/src-tauri/crates/vali/vali-data/src/: decode.rs  lib.rs  paths.rs
app/src-tauri/crates/vali/vali-generate/: Cargo.toml
app/src-tauri/crates/vali/vali-generate/src/: country_weights.rs  definition.rs  distribution.rs  download.rs  export.rs  filter.rs  generate.rs  geometry.rs  goals.rs  lib.rs  names.rs  neighbor.rs  progress.rs  proximity.rs  store.rs  tags.rs  weights.rs
plugins/: README.md  build-all.mjs  build-plugin.mjs  dev.mjs  mma-externals.js  registry.json
plugins/copyright/: index.js  manifest.json  package-lock.json  package.json  tsconfig.json
plugins/heatmap/: index.js  manifest.json  package-lock.json  package.json  tsconfig.json
plugins/inaturalist/: index.js  (+3 more)
scripts/: bump.sh  docker-e2e.sh  migrate-folders.mjs  setup-fork-release-secrets.sh
(+600 files in other folders)
