[package]
name = "tauri-plugin-webserve"
version = "0.1.0"
edition = "2021"
description = "Serve a Tauri app's backend + frontend over HTTP so it runs in a plain browser. Drop-in: attaches to the live app, reuses its invoke handler and asset bundle."

[dependencies]
tauri = { version = "2", features = [] }
tiny_http = "0.12"
serde_json = "1"
log = "0.4"
